tests/baselines/reference/parserMemberAccessorDeclaration5(strict=true).errors.txt
parserMemberAccessorDeclaration5.ts(2,7): error TS7032: Property '"a"' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
parserMemberAccessorDeclaration5.ts(2,11): error TS7006: Parameter 'i' implicitly has an 'any' type.


==== parserMemberAccessorDeclaration5.ts (2 errors) ====
    class C {
      set "a"(i) { }
          ~~~
!!! error TS7032: Property '"a"' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
              ~
!!! error TS7006: Parameter 'i' implicitly has an 'any' type.
    }